# FoundFlow

./: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  request_validations.py  utils.py
static/css/: base.css  content_section.css  footer.css  header.css  login_form.css  payment_options.css  progress_bar.css  register_form.css
static/js/: base.js
templates/: footer.html  home.html  layout.html  login.html  navbar.html  register.html  user.html
